--- a/Code/src/config.json
+++ b/Code/src/config.json
@@ -5,7 +5,30 @@
     "robotsPositions": {
         "team1": [
             {
-                "x": "45"
+                "x": 15,
+                "y": 60
+            },
+            {
+                "x": 45,
+                "y": 60
+            },
+            {
+                "x": 60,
+                "y": 60
+            }
+        ],
+        "team2": [
+            {
+                "x": 75,
+                "y": 60
+            },
+            {
+                "x": 95,
+                "y": 60
+            },
+            {
+                "x": 115,
+                "y": 60
             }
         ]
     }
