--- a/Code/src/config.json
+++ b/Code/src/config.json
@@ -17,35 +17,59 @@
     "robotsPositions": {
         "team1": [
             {
-                "x": 40,
-                "y": 30
+                "x": 10,
+                "y": 65,
+                "f": 0
             },
             {
-                "x": 130,
-                "y": 60
+                "x": 45,
+                "y": 65,
+                "f": 0
             },
             {
-                "x": 130,
-                "y": 60
+                "x": 65,
+                "y": 30,
+                "f": 0
             }
         ],
         "team2": [
             {
-                "x": 130,
-                "y": 30
+                "x": 121,
+                "y": 65,
+                "f": 0
             },
             {
-                "x": 130,
-                "y": 76
+                "x": 135,
+                "y": 65,
+                "f": 0
             },
             {
-                "x": 130,
-                "y": 90
+                "x": 90,
+                "y": 65,
+                "f": 0
             }
         ]
     },
     "ball": {
-        "x": 20,
-        "y": 40
-    }
+        "x": 90,
+        "y": 32
+    },
+    "walls": [
+        {
+            "x": 75,
+            "y": 0
+        },
+        {
+            "x": 75,
+            "y": 130
+        },
+        {
+            "x": 0,
+            "y": 65
+        },
+        {
+            "x": 150,
+            "y": 65
+        }
+    ]
 }
